crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_unnamed_function_with_attrs_definition/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected OpenBrace. One of AtKeyword_Unreserved, ConstantKeyword_Reserved, ErrorKeyword_Unreserved, ExternalKeyword_Reserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBracket, OverrideKeyword_Reserved, PayableKeyword_Reserved, PrivateKeyword_Reserved, PublicKeyword_Reserved, PureKeyword_Reserved, ReturnsKeyword_Reserved, RevertKeyword_Unreserved, TransientKeyword_Unreserved, ViewKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/member_unnamed_function_with_attrs_definition/input.sol:3:31 ]
   │
 3 │   function() external payable {}
   │                               ┬  
   │                               ╰── Error occurred here.
───╯
